--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>мемы</h1>
-    <h2>что такое мемы</h2>
+    <div class="wrapper">
+    <h1>я</h1>
+    <h2>что я умею</h2>
     <div class="parent">
-        <div> <img class="my_photo" src="1-19.jpg" alt="мем"></div>
-        <div><h2>Мемом является любая идея, символ, манера, ситуация или образ действия, осознанно или неосознанно передаваемые от человека к человеку посредством речи, письма, видео, ритуалов, жестов и т. д.</h2></div>
-    </div>
+        <div> <img class="my_photo" src="Без названия.jpg" alt="я"></div>
+        <div><h2>Я люблю работать. Готов работать за стакан воды и бананы.</h2></div>
+        <div><h2>Мое любимое занятие после работы, это мыться в чистой воде, позировать фотографам и слушать похвалу хозяина.</h2></div>
+        <div><h2>Мое нелюбимое занятие, это наказывать своих братьев плетью за неподчинение хозяину.</h2></div>
+        </div>
     
+    <div class=parent2>
+        <div><h3></h3></div>
+    </div>
+</div>
     
 </body>
 </html>
