--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
         </div>
     
     <div class=parent2>
-        <div><h3></h3></div>
+        <header>
+            <div><img src="img.jpg" alt="обама"></div>
+            <div>
+                <ul>
+                    <li>телефон: 579080082</li>
+                    <li>email: ilikbeiaewaz@gmail.com</li>
+                    <li>github: PRODOGI</li>
+                </ul>
+            </div>
+        </header>
     </div>
 </div>
     
